Fixed css screen overflows

--- a/homegig/app/webpack/stylesheets/application.scss
+++ b/homegig/app/webpack/stylesheets/application.scss
@@ -408,3 +408,10 @@ body {
       max-height: 500px;
       width:100%;
     }
+
+    .manage_image {
+      min-width: 80px;
+      min-height: 80px;
+      max-width: 80px;
+      max-height: 80px;
+    }
